fixed table alignment

--- a/myStyle.css
+++ b/myStyle.css
@@ -67,7 +67,7 @@ div {
 #table2 {
     border-collapse: collapse;
     margin-right: auto;
-    margin-left: 129px;
+    margin-left: 137px;
     margin-bottom: 10px;
 }
 
